Do not show animation on pageStack.replace

ColumnView should replace the page without sliding animation when a page is replaced.

BUG: 426770