src/columnview.cpp
@@ -16,7 +16,6 @@
 #include <QDebug>
 #include <QPropertyAnimation>
 
-
 QHash<QObject *, ColumnViewAttached *> ColumnView::m_attachedObjects = QHash<QObject *, ColumnViewAttached *>();
 
 class QmlComponentsPoolSingleton
@@ -854,8 +853,6 @@ void ColumnView::setCurrentIndex(int index)
                             width() - m_contentItem->m_rightPinnedSpace - m_contentItem->m_leftPinnedSpace,
                             height());
 
-        m_contentItem->m_shouldAnimate = true;
-
         if (!m_mouseDown) {
             if (!contentsRect.contains(mappedCurrent)) {
                 m_contentItem->m_viewAnchorItem = m_currentItem;
@@ -1098,8 +1095,9 @@ void ColumnView::insertItem(int pos, QQuickItem *item)
     item->setParentItem(m_contentItem);
 
     item->forceActiveFocus();
-    // We layout immediately to be sure all geometries are final after the return of this call
-    m_contentItem->m_shouldAnimate = false;
+
+    // Animate shift to new item.
+    m_contentItem->m_shouldAnimate = true;
     m_contentItem->layoutItems();
     Q_EMIT contentChildrenChanged();
 
@@ -1109,6 +1107,51 @@ void ColumnView::insertItem(int pos, QQuickItem *item)
         ++m_currentIndex;
         Q_EMIT currentIndexChanged();
     }
+
+    Q_EMIT itemInserted(pos, item);
+}
+
+void ColumnView::replaceItem(int pos, QQuickItem *item)
+{
+    if (pos < 0 || pos >= m_contentItem->m_items.length()) {
+        qWarning() << "Position" << pos << "passed to ColumnView::replaceItem is out of range.";
+        return;
+    }
+    if (!item) {
+        qWarning() << "Null item passed to ColumnView::replaceItem.";
+        return;
+    }
+
+    QQuickItem *oldItem = m_contentItem->m_items[pos];
+
+    m_contentItem->forgetItem(oldItem);
+    oldItem->setVisible(false);
+
+    ColumnViewAttached *attached = qobject_cast<ColumnViewAttached *>(qmlAttachedPropertiesObject<ColumnView>(oldItem, false));
+
+    if (attached && attached->shouldDeleteOnRemove()) {
+        oldItem->deleteLater();
+    } else {
+        oldItem->setParentItem(attached ? attached->originalParent() : nullptr);
+    }
+
+    Q_EMIT itemRemoved(oldItem);
+
+    m_contentItem->m_items.insert(pos, item);
+
+    connect(item, &QObject::destroyed, m_contentItem, [this, item]() {
+        removeItem(item);
+    });
+
+    attached = qobject_cast<ColumnViewAttached *>(qmlAttachedPropertiesObject<ColumnView>(item, true));
+    attached->setOriginalParent(item->parentItem());
+    attached->setShouldDeleteOnRemove(item->parentItem() == nullptr && QQmlEngine::objectOwnership(item) == QQmlEngine::JavaScriptOwnership);
+    item->setParentItem(m_contentItem);
+
+    // Disable animation so replacement happens immediately.
+    m_contentItem->m_shouldAnimate = false;
+    m_contentItem->layoutItems();
+    Q_EMIT contentChildrenChanged();
 
     Q_EMIT itemInserted(pos, item);
 }
